--- a/app/views/articles/_comment.html.erb
+++ b/app/views/articles/_comment.html.erb
@@ -1,7 +1,7 @@
 <div>
 	<h4>Comment by <%= comment.author_name %></h4>
 	<p class="comment"><%= comment.body %></p>
-	<p><%= comment.updated_at %></p>
+	<p>Posted <%= distance_of_time_in_words(comment.article.created_at, comment.created_at) %> later</p>
 	
 </div>
 <%=  link_to "delete", article_comment_path(@comment.article), method: :delete, data: {confirm: "grrrrr,really, you wanna delete this article?"} %><br>
