--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,10 +5,11 @@
 		<%= link_to tag.name, tag_path(tag) %>
 	<% end %>
 </p>
+<p><%= image_tag @article.image.url(:medium) %></p>
 <p><%= @article.body %></p>
 
 
-<h3>Comments ( <%= @article.comments.size %></h3>
+<h3>Comments ( <%= @article.comments.size %> )</h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
 
 <%= render partial: 'comments/form' %>
