--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,6 +4,7 @@
 	<% @articles.each do |article| %>
 	<li>
 		<%= link_to article.title, article_path(article), class: 'article_title', id: "article_#{article.id}" %>
+		# comments: <%= article.comments.size %>
 	</li>
 	<% end %>
 </ul>
