--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,7 @@
 <% if logged_in? %>
 <h1><%= @article.title %></h1>
 <p>
-	Tags:
+	<%= link_to "Tags:",  tags_url  %>
 	<% @article.tags.each do |tag| %>
 		<%= link_to tag.name, tag_path(tag) %>
 	<% end %>
